tests/tooling/fixtures/native/execution/positive/message_send_nonzero_bound_identifier_post_assignment_fast_path.objc3
module MessageSendNonzeroBoundIdentifierPostAssignmentFastPath;

fn main() -> i32 {
  let receiver = 0;
  receiver = 7;
  return [receiver ping];
}
