tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_return_pure_fn_extern.objc3
module MisplacedQualifierAfterReturnPureFnExtern;

pure fn add(lhs: i32, rhs: i32) -> i32 extern;

fn main() -> i32 {
  return 0;
}
